# jaxgp

./: README.md  pyproject.toml
examples/: QuickStart.ipynb  SVGP.ipynb
examples/MultiFidelityTesting/: Cokriging.ipynb  Hyperkriging.ipynb  KennedyOH.ipynb  NARGP.ipynb  SyntheticTestProblem.ipynb
src/jaxgp/: __init__.py  gp.py  kernel.py  likelihood.py  mean.py  mf.py  optim.py  util.py
